Fixed the footer to be responsive (with dark mode) Added styling to log in page to ensure full page is in dark mode.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -204,3 +204,21 @@
     font-size: 1.4rem;
   }
 }
+
+/*for the large screens fitted the footer*/
+@media screen and (min-width: 1912px) {
+  .footer-area {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .container {
+    max-width: 1912px;
+    margin: 0 auto;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
